<resources>
    <string name="app_name">DroneSurvey</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="othomosaic_label">Orthomosaic Creation Details</string>
    <string name="filter_location">Filter Location</string>
    <string name="survey_no">Survey No</string>
    <string name="submit">Submit</string>
    <string name="select_district">District</string>
    <string name="select_taluk">Taluk</string>
    <string name="select_village">Village</string>
    <string name="select_gram_panchayat">Gram Panchayat</string>
    <string name="area_in_sq_ft">Area in Sq.Ft</string>
    <string name="enter_valid_password">Enter valid Password</string>
    <string name="enter_valid_emailID">Enter valid email ID</string>

    <string name="API_KEY">AAPK70cf10a3ed034554a34e08af2dca3c2bkkjTXZI_INhpTdGil7vIxN4aioK8AtJihyOsX8E2HzGKBkGMGAmq1Ih3A9Wm5HIv</string>
    <string name="edit">Edit</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="pointButtonDescription">Draw new point</string>
    <string name="polylineButtonDescription">Draw new polyline</string>
    <string name="polygonButtonDescription">Draw new polygon</string>
    <string name="freehandLineButtonDescription">Draw freehand line</string>
    <string name="freehandPolyButtonDescription">Draw freehand polygon</string>
    <string name="undoButtonDescription">Undo</string>
    <string name="redoButtonDescription">Redo</string>
    <string name="stopButtonDescription">Stop</string>


    <string-array name="district_array">
        <item>--Select--</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
    </string-array>

    <string-array name="anantapurTaluka_array">
        <item>--Select--</item>
        <item>Anantapur</item>
        <item>Rayadurgam</item>
        <item>Penukonda</item>
    </string-array>

    <string-array name="chittoorTaluka_array">
        <item>--Select--</item>
        <item>Bangarupalem</item>
        <item>Kuppam</item>
    </string-array>

    <string-array name="anantapur_Village_GP_array">
        <item>--Select--</item>
        <item>Kudair</item>
        <item>Raptadu</item>
    </string-array>

    <string-array name="rayadurgam_Village_GP_array">
        <item>--Select--</item>
        <item>Gummagatta</item>
        <item>Hirehal</item>
    </string-array>

    <string-array name="penukonda_Village_GP_array">
        <item>--Select--</item>
        <item>Roddam</item>
        <item>Somanandipalle</item>
    </string-array>
    <string-array name="bangarupalem_Village_GP_array">
        <item>--Select--</item>
        <item>Thavanampalle</item>
        <item>Irala</item>
    </string-array>
    <string-array name="kuppam_Village_GP_array">
        <item>--Select--</item>
        <item>Santhipuram</item>
        <item>Gudupalle</item>
    </string-array>

</resources>