<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/toolbar_background">

    <ImageButton
        android:id="@+id/pointButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/pointButtonDescription"
        android:src="@drawable/ic_action_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pointsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/pointsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pointButton"
        android:layout_toRightOf="@+id/pointButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/polylineButtonDescription"
        android:src="@drawable/ic_action_multipoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/polylineButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pointButton" />

    <ImageButton
        android:id="@+id/polylineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pointsButton"
        android:layout_toRightOf="@+id/pointsButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/polylineButtonDescription"
        android:src="@drawable/ic_action_polyline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/polygonButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pointsButton" />

    <ImageButton
        android:id="@+id/polygonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/polylineButton"
        android:layout_toRightOf="@+id/polylineButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/polygonButtonDescription"
        android:src="@drawable/ic_action_polygon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/freehandLineButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/polylineButton" />

    <ImageButton
        android:id="@+id/freehandPolygonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/freehandLineButton"
        android:layout_toRightOf="@+id/freehandLineButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/freehandPolyButtonDescription"
        android:src="@drawable/ic_action_freehand_polygon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/freehandLineButton" />

    <ImageButton
        android:id="@+id/freehandLineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/polygonButton"
        android:layout_toRightOf="@+id/polygonButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/freehandLineButtonDescription"
        android:src="@drawable/ic_action_freehand_polyline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/freehandPolygonButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/polygonButton" />

</androidx.constraintlayout.widget.ConstraintLayout>